v1.4.0: 2013 Aug

	- general udpates for OF 0.8.0:
		- moved libpd source into libs/libpd to match ofxAddonsTemplate
		- split example into seperate desktop & ios projects (easier to generate)
		- regenerated project files
	- added PitchShifter example
	- updated to latest libpd

v1.3.0: 2012 Aug, Sep, Oct

	- updated to latest libpd
	- removed [expr~] due to licensing, should be left up to individual developers
	- added ability to open a new patch instance with an existing patch object
	- changed logging to use "Pd" logging module

v1.2.0: 2012 Jul

	- added support for PdBase event polling in ofxPd

v1.1.0: 2012 Mar

	- updated to latest libpd
	- List::asFloat() & List::asSymbol() are now List::getFloat() & List::getSymbol()

v1.0.0: 2011 Oct, Nov

	- added List building & sending
	- wrapped Pd receiver and types within a "pd" namespace
	- reworked api to better match libpd Java api
		- channel is now first arg in midi functions
		- port is now first arg in raw midi byte functions
		- pgm num range is now 1-128 to match [pgmin]/[pgmout] (was 0-127)
		- destination names are now set when finishing compound messages
		- renamed "sysRT" functions to "sysRt"
		- renamed "getArrayLen" to "getArraySize"
		- renamed "*Source" functions to "subscribe" functions
		- renamed "*subscribe" functions to "receive/ignore" functions
		- renamed "ofxPdListener" class to "PdReceiver"
		- renamed "*Listener" functions to "*Receiver" functions
		- renamed Receiver functions (bangReceived, floatReceived, etc) to match
		  Java Receiver (receiveBang, receiveFloat, etc)
		- split midi receiving into PdMidiReceiver base class
		- renamed "dspOn/dspOff" to "start/stop"
		- added computeAudio function
		- receivers now receive from all subscribed sources by default
		- renamed ofxPdListener and ofxPdTypes source files to PdReceiver and PdTypes
		- renamed "getArraySize" function to "arraySize"
		- renamed "setMaxMsgLength" function to "setMaxMessageLen"